Grid class done.